<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.dininghall.Main4Activity">

    <item
        android:id="@+id/Wads"
        android:orderInCategory="100"
        android:title="@string/Wads"
        app:showAsAction = "never"
        />

    <item
        android:id="@+id/DHH"
        android:orderInCategory="100"
        android:title="@string/DHH"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/McNair"
        android:orderInCategory="100"
        android:title="@string/McNair"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/Cafe"
        android:orderInCategory="100"
        android:title="@string/Cafe"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/my_account_info"
        android:orderInCategory="100"
        android:title="@string/my_account_info"
        app:showAsAction="never"
        />
</menu>

