<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="100dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/textTab1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/breakfast"
        android:textSize="25sp" />

    <TextView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginLeft="32dp"
    android:layout_marginTop= "60dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
    android:text="@string/breakfast_option_1"
    android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop= "85dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/breakfast_option_2"
        android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop= "110dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/breakfast_option_3"
        android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop= "135dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/breakfast_option_4"
        android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop= "160dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/assorted_bakery"
        android:textSize="20sp" />


    <TextView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="200dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
    android:text="@string/lunch"
    android:textSize="25sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="250dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/lunch_option_1"
        android:textSize="20sp" />

    <TextView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginLeft="32dp"
    android:layout_marginTop="275dp"
    android:paddingLeft="0dp"
    android:paddingStart="0dp"
    android:paddingEnd="0dp"
    android:text="@string/lunch_option_2"
    android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="300dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/assorted_desserts"
        android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="375dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/dinner"
        android:textSize="25sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="425dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/dinner_option_1"
        android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="450dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/dinner_option_2"
        android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="475dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/dinner_option_3"
        android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="525dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/dinner_option_4"
        android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="550dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/dinner_option_5"
        android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="575dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/vegetables"
        android:textSize="20sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="600dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/assorted_desserts"
        android:textSize="20sp" />

    </RelativeLayout>


</ScrollView>